--- a/CrossPlatformDSA/CrossPlatformDSA.csproj
+++ b/CrossPlatformDSA/CrossPlatformDSA.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Interop.KalkanCryptCOMLib">
+      <HintPath>Lib\Interop.KalkanCryptCOMLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
