--- a/CrossPlatformDSA/appsettings.json
+++ b/CrossPlatformDSA/appsettings.json
@@ -2,7 +2,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://0.0.0.0:7000"
+        "Url": "http://0.0.0.0:7002"
       }
     }
   },
@@ -12,6 +12,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "LoggerSettings": {
+    "LoggingLvl": 1,
+    "LoggingDir": "LogDir"
   },
   "AllowedHosts": "*"
 }
