--- a/CrossPlatformDSA/CrossPlatformDSA.csproj
+++ b/CrossPlatformDSA/CrossPlatformDSA.csproj
@@ -12,6 +12,12 @@
     <Reference Include="Interop.KalkanCryptCOMLib">
       <HintPath>Lib\Interop.KalkanCryptCOMLib.dll</HintPath>
     </Reference>
+    <Reference Include="WTO.Classes.Application">
+      <HintPath>..\WTO.Classes\WTO.Classes.Application\bin\Debug\netstandard2.0\WTO.Classes.Application.dll</HintPath>
+    </Reference>
+    <Reference Include="WTO.Classes.Infrastructure">
+      <HintPath>..\WTO.Classes\WTO.Classes.Infrastructure\bin\Debug\netcoreapp3.1\WTO.Classes.Infrastructure.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
