--- a/CrossPlatformDSA/CrossPlatformDSA.csproj
+++ b/CrossPlatformDSA/CrossPlatformDSA.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
